<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:background="#EAEAEA"
    tools:context="com.webmyne.paylabas.userapp.user_navigation.Setting">

<include
    layout="@layout/app_bar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xml_ENTERYOURREMIALDID"
            android:textColor="#494949"
            android:id="@+id/etEmail" />

    <Spinner android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/security_questions"
        android:id="@+id/spQuestion"></Spinner>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/xml_ANSWERR"
        android:textColor="#494949"
        android:id="@+id/etAnswer" />





    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/btnsendpin"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/xml_SENDPIN">
    </com.gc.materialdesign.views.ButtonFlat>

    <LinearLayout
        android:id="@+id/changepasswordLayout"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/ed_rounded"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/xml_ENTERCODESENTTOYOUREMAIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/paylabas_blue"
                android:id="@+id/msg"
                android:textSize="18sp" />
            <EditText

                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xml_RESETCODE"
                android:textSize="18sp"
                android:gravity="left"
                style="@style/MyEdittext"
                android:id="@+id/etResetCode"
                android:padding="8dp" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xml_NEWPIN"
                android:maxLength="6"
                android:inputType="numberPassword"
                android:textColor="#494949"
                android:id="@+id/etNewPassword" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xml_CONFIRMNEWPIN"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColor="#494949"
                android:id="@+id/etNewPassword2" />

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:text = "@string/xml_RESETPIN"
                    android:background="@color/paylabas_blue"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

    </ScrollView>
</RelativeLayout>
