<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_pattern"

    tools:context="com.webmyne.paylabas.userapp.giftcode.GenerateGCFragment">

    <!--Bottom Linear-->
    <LinearLayout
        android:id="@+id/bottomLinearGenerateGC"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnResetGenerateGC"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/xml_RRESET"
            android:background="@color/paylabas_grey"
            android:layout_weight="1" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnGenerateGCGenerateGC"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/xml_CHECKPRICE"
            android:background="@color/color_giftcode"
            android:layout_weight="1" />

    </LinearLayout>



    <ScrollView
        android:layout_above="@id/bottomLinearGenerateGC"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Main linear -->
    <LinearLayout
        android:id="@+id/mainlineargenerategc"
        android:padding="@dimen/activity_horizontal_margin"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:text="@string/xml_RECIPIENTCONTACTC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <Spinner
            android:spinnerMode="dialog"
            android:id="@+id/spinnerRecipientContactGenerateGc"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              ></Spinner>



        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="8dp"
            android:text="@string/xml_COUNTRY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <Spinner
            android:spinnerMode="dialog"
            android:id="@+id/spinnerCountryGenerateGc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"></Spinner>


        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="8dp"
            android:text="@string/xml_MOBNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCCGenerateGC"
                android:fontFamily="sans-serif-condensed"
                android:paddingRight="8dp"
                android:gravity="right|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="000"
                android:layout_weight="4" />

            <EditText

                android:inputType="phone"
                android:hint="@string/xml_MOBC"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/edMobileNumberGenerateGC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_weight="1" />

        </LinearLayout>


        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="8dp"
            android:text="@string/xml_AMOUNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:paddingRight="8dp"
                android:gravity="right|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:layout_weight="4" />



            <EditText
                android:hint="@string/xml_AMMOUTN"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/edAmountGenerateGC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:maxLength="6"
                android:inputType="numberDecimal"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <!--AnotherLinear-->
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLinearGenerateGC"
        android:id="@+id/linearService"
        layout="@layout/item_dialog_generategc"
       >

    </include>


</RelativeLayout>