<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back"
    tools:context="com.webmyne.paylabas.userapp.money_transfer.PtoPSecondScreen">
    <!--Bottom Linear-->
    <include layout="@layout/app_bar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/bottomLinearGenerateGC"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnBackPtoPSecondScreen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/xml_BACK"
            android:background="@color/paylabas_grey"
            android:layout_weight="1" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnNextPtoPSecondScreen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/xml_NEXTS"
            android:background="@color/paylabas_blue"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_above="@id/bottomLinearGenerateGC"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Main linear -->
    <LinearLayout
        android:id="@+id/mainlineargenerategc"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:text="@string/xml_RECIPIENTSCONTACTS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <Spinner
            android:spinnerMode="dialog"
            android:id="@+id/spinnerRecipientP2P"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="8dp"
                android:text="@string/xml_FFNAMES"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="@dimen/normal_text" />


            <TextView
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="8dp"
                android:text="@string/xml_LLASTNAMES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="@dimen/normal_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:text="@string/xml_FFNAMES"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:inputType="text"
                android:layout_weight="1"
                />
            <EditText
                android:text="@string/xml_LLASTNAMES"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:inputType="text"
                android:layout_weight="1"
                />

        </LinearLayout>

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="8dp"
            android:text="@string/xml_COUNRTEYY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <Spinner
            android:spinnerMode="dialog"
            android:id="@+id/spinnerCountryP2P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"></Spinner>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="8dp"
                android:text="@string/xml_STATEE"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="@dimen/normal_text" />


            <TextView
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="8dp"
                android:text="@string/xml_CITYY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="@dimen/normal_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:spinnerMode="dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="One"
                android:id="@+id/spinnerStateP2P"
                android:layout_weight="1" />

            <Spinner
                android:spinnerMode="dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="One"
                android:id="@+id/spinnerCityP2P"
                android:layout_weight="1" />

        </LinearLayout>


        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="8dp"
            android:text="@string/xml_MOBINLENO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Spinner
                android:spinnerMode="dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCountryCodeP2P"
                />

            <EditText

                android:inputType="phone"
                android:hint="@string/xml_MMON"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/etMobileNumberP2P"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_weight="1" />

        </LinearLayout>


        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="8dp"
            android:text="@string/xml_EEMAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="@dimen/normal_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView-->
                <!--android:visibility="invisible"-->
                <!--android:fontFamily="sans-serif-condensed"-->
                <!--android:paddingRight="8dp"-->
                <!--android:gravity="right|center_vertical"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/euro"-->
                <!--android:layout_weight="4" />-->

            <EditText
                android:hint="@string/xml_EEMAIL"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/etEmailP2P"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
    </RelativeLayout>
</LinearLayout>
